# WAFFLE

./: .gitmodules  pyproject.toml
waffle/: README.md  __init__.py  pacl.mplstyle  prototyping.ipynb  sample_day_timeseries_ds.nc  sample_timeseries_ds.nc  waffle.py
waffle/reference_datasets/: sample_spatial_ds.nc
